Fix align

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ main {
 section#hero {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
     gap: 25px;
   }
@@ -99,7 +98,6 @@ section#hero {
 }
 
 #hero h2 {
-    align-self: flex-start;
     font-size: 22px;
     font-weight: 500;
 }
@@ -119,14 +117,13 @@ section#hero {
     background-color: var(--color-card);
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     border-radius: 15px;
     padding: 20px 15px;
     box-shadow: 0px 0px 50px var(--color-shadow);
 }
 
 .reco-card img {
-    /* width: 62px; */
     height: 100%;
 }
 
@@ -158,6 +155,7 @@ section#hero {
 }
 
 .reco-card .cart-add {
+    align-self: center;
     width: 85px;
     height: 29px;
     border-radius: 15px;
